# dealdesk

./: .gitignore  CLAUDE.md  README.md
backend/: CLAUDE.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 028f40da1699_add_connector_and_report_tables.py  1f9d03ea795f_create_historical_financials_table.py  5a7867bf4f27_initial_schema.py  838e3a098023_add_comps_table.py  908ebab05098_add_exploration_chat_and_snapshot_tables.py  a9950ea99abc_initial_schema.py  b611de5dff14_add_tags_and_new_tables.py  bc3a435227c2_add_assumption_group_and_forecast_fields.py  fb36c072fdee_add_field_validations_table.py
backend/app/: config.py  main.py
backend/app/api/: CLAUDE.md  dependencies.py  schemas.py
backend/app/api/v1/: assumptions.py  chat.py  comps.py  connectors.py  datasets.py  deals.py  documents.py  explorations.py  exports.py  financial_model.py  model.py  (+6 more)
backend/app/domain/: CLAUDE.md  model_engine.py
backend/app/infrastructure/: CLAUDE.md
backend/app/services/: benchmark_service.py  chat_service.py  comps_service.py  connector_service.py  deal_service.py  document_service.py  export_service.py  financial_model_service.py  historical_financial_service.py  model_service.py  report_service.py  validation_service.py
backend/tests/: conftest.py  test_assumption_groups.py  test_comp_entity.py  test_comps_service.py  test_dcf.py  test_financial_model_service.py  test_golden_integration.py  test_historical_financial_entity.py  test_historical_financial_service.py  test_model_engine.py  test_rentcast_provider.py  test_tavily_comps_provider.py
(+130 files in other folders)
